cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template__deepseek-chat__row_14_update_14_template_20250505_122637.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Creates VPC, Subnet, Security Group, ENI with two EIPs and secondary private IPs'

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: 'Multi-IP-VPC'

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: 'Multi-IP-IGW'

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: '10.0.0.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: 'Multi-IP-Subnet'

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: 'Multi-IP-RouteTable'

  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: 'Multi-IP-SG'
      GroupDescription: 'Security group for ENI with multiple IPs'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: 'Multi-IP-SecurityGroup'

  NetworkInterface:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref Subnet
      Description: 'ENI with multiple IP addresses'
      GroupSet:
        - !Ref SecurityGroup
      PrivateIpAddresses:
        - Primary: true
          PrivateIpAddress: '10.0.0.10'
        - Primary: false
          PrivateIpAddress: '10.0.0.11'
      Tags:
        - Key: Name
          Value: 'Multi-IP-ENI'

  ElasticIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: 'Primary-EIP'

  ElasticIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: 'Secondary-EIP'

  EIP1Association:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt ElasticIP1.AllocationId
      NetworkInterfaceId: !Ref NetworkInterface
      PrivateIpAddress: '10.0.0.10'

  EIP2Association:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt ElasticIP2.AllocationId
      NetworkInterfaceId: !Ref NetworkInterface
      PrivateIpAddress: '10.0.0.11'

Outputs:
  VPCId:
    Description: 'The ID of the created VPC'
    Value: !Ref VPC

  SubnetId:
    Description: 'The ID of the created Subnet'
    Value: !Ref Subnet

  SecurityGroupId:
    Description: 'The ID of the created Security Group'
    Value: !Ref SecurityGroup

  ENIId:
    Description: 'The ID of the created Elastic Network Interface'
    Value: !Ref NetworkInterface

  EIP1PublicIP:
    Description: 'Public IP address of the first Elastic IP'
    Value: !GetAtt ElasticIP1.PublicIp

  EIP2PublicIP:
    Description: 'Public IP address of the second Elastic IP'
    Value: !GetAtt ElasticIP2.PublicIp
